third_party/move/move-compiler-v2/tests/ability-check/globals.exp

Diagnostics:
warning: Unused parameter `x`. Consider removing or prefixing with an underscore: `_x`
   ┌─ tests/ability-check/globals.move:18:27
   │
18 │     fun write(a: address, x: u64): u64 {
   │                           ^


Diagnostics:
error: type `globals::R` does not have the `key` ability
  ┌─ tests/ability-check/globals.move:6:9
  │
6 │         move_to(s, R{f: 1});
  │         ^^^^^^^^^^^^^^^^^^^ required because of storage operation here

error: type `globals::R` does not have the `key` ability
   ┌─ tests/ability-check/globals.move:10:9
   │
10 │         exists<R>(a)
   │         ^^^^^^^^^^^^ required because of storage operation here

error: type `globals::R` does not have the `key` ability
   ┌─ tests/ability-check/globals.move:14:17
   │
14 │         let r = borrow_global<R>(a);
   │                 ^^^^^^^^^^^^^^^^^^^ required because of storage operation here

error: type `globals::R` does not have the `key` ability
   ┌─ tests/ability-check/globals.move:19:17
   │
19 │         let r = borrow_global_mut<R>(a);
   │                 ^^^^^^^^^^^^^^^^^^^^^^^ required because of storage operation here
